@startuml
!define ENTITY class
!define RELATIONSHIP --> 

' Authentication & User Management
ENTITY accounts {
  id
  email
  username
  hash_password
  enabled
  locked
  two_fa
  balance
  join_in_date
  last_login
  changed_username
  secret
  created_date
  updated_date
}

ENTITY roles {
  id
  code
  name
  created_date
  updated_date
}

ENTITY account_roles {
  id
  account_id
  role_id
  enabled
  created_date
  updated_date
}

ENTITY login_sessions {
  id
  account_id
  ip_address
  login_time
  device_name
  device_fingerprint
  user_agent
  location
  created_date
  updated_date
}

' Customer Management
ENTITY customers {
  id
  account_id
  first_name
  last_name
  phone
  address
  avatar_url
  gender
  created_date
  updated_date
}

ENTITY customer_contacts {
  id
  customer_id
  name
  customer_name
  phone
  address_line
  country
  state
  district
  ward
  type
  defaulted
  created_date
  updated_date
}

ENTITY customer_bank_infos {
  id
  customer_id
  account_number
  bank_name
  user_bank_name
  bank_bin
  created_date
  updated_date
}

' Seller Management
ENTITY sellers {
  id
  account_id
  shop_name
  email
  phone_number
  identity_number
  description
  avatar_url
  background
  front_side_identity_card
  back_side_identity_card
  verified
  identity_verified
  address_line
  district
  ward
  state
  avg_vote
  created_date
  updated_date
}

' Product Management
ENTITY brands {
  id
  name
  description
  img_url
  enabled
  created_date
  updated_date
}

ENTITY categories {
  id
  name
  description
  enabled
  visible
  parent_id
  created_date
  updated_date
}

ENTITY products {
  id
  seller_id
  brand_id
  name
  model
  description
  short_description
  current_price
  thumbnail
  img_urls
  tags
  verified
  enabled
  avg_vote
  condition
  quantity
  status
  warranty_expiry_date
  product_parent_id
  created_date
  updated_date
}

ENTITY product_categories {
  product_id
  category_id
}

ENTITY brand_categories {
  brand_id
  category_id
}

ENTITY product_price_histories {
  id
  product_id
  old_price
  new_price
  from_date
  update_date
  created_date
  updated_date
}

ENTITY product_reviews {
  id
  product_id
  customer_id
  seller_id
  order_id
  order_combo_id
  content
  vote
  helpful
  status
  image_review
  reply_content
  reply_created_date
  reply_updated_date
  created_date
  updated_date
}

' Order Management
ENTITY orders {
  id
  customer_id
  sub_total
  tax_total
  discount_total
  shipping_total
  grand_total
  created_date
  updated_date
}

ENTITY order_combos {
  id
  seller_id
  order_status_id
  order_destination_id
  grand_price
  cancelled_reason
  date_create_reason
  created_date
  updated_date
}

ENTITY order_items {
  id
  order_id
  order_combo_id
  product_id
  product_name
  short_description
  background_url
  base_price
  quantity
  unit
  created_date
  updated_date
}

ENTITY order_statuses {
  id
  code
  name
  enabled
  created_date
  updated_date
}

ENTITY order_destinations {
  id
  order_id
  customer_name
  phone
  address
  address_line
  country
  state
  district
  ward
  created_date
  updated_date
}

ENTITY order_histories {
  id
  order_combo_id
  seller_id
  old_order_status
  new_order_status
  current_order_status
  status
  notes
  created_date
  updated_date
}

ENTITY order_combo_deliveries {
  id
  order_combo_id
  delivery_code
  delivery_type
  created_date
  updated_date
}

' Payment Management
ENTITY payment_methods {
  id
  code
  name
  description
  type
  handler_class
  callback_uri
  img_url
  enabled
  created_date
  updated_date
}

ENTITY payment_histories {
  id
  order_id
  payment_method_id
  payment_code
  payment_content
  payment_total
  payment_status
  payment_time
  created_date
  updated_date
}

' Financial Management
ENTITY transactions {
  id
  account_id
  order_combo_id
  amount
  type
  created_date
  updated_date
}

ENTITY withdraw_requests {
  id
  account_id
  amount
  bank_account
  bank_bin
  user_bank_name
  status
  notes
  processed_date
  prove_image_url
  qr_code_url
  created_date
  updated_date
}
' Reporting System
ENTITY report_sellers {
  id
  seller_id
  customer_id
  admin_id
  product_id
  order_id
  type_report
  content
  image
  resolution_status
  resolution_detail
  resolution_date
  created_date
  updated_date
}

accounts ||--o{ account_roles : has
roles ||--o{ account_roles : assigned_to
accounts ||--o{ login_sessions : creates
accounts ||--|| customers : profile
accounts ||--|| sellers : profile
accounts ||--o{ transactions : owns
accounts ||--o{ withdraw_requests : requests

customers ||--o{ customer_contacts : has
customers ||--o{ customer_bank_infos : has
customers ||--o{ orders : places
customers ||--o{ product_reviews : writes
customers ||--o{ rooms : participates
customers ||--o{ report_sellers : reports

sellers ||--o{ products : sells
sellers ||--o{ order_combos : manages
sellers ||--o{ order_histories : tracks
sellers ||--o{ rooms : participates
sellers ||--o{ product_reviews : receives

brands ||--o{ products : categorizes
brands ||--o{ brand_categories : belongs_to
categories ||--o{ product_categories : contains
categories ||--o{ brand_categories : includes
categories ||--o{ categories : parent_of

products ||--o{ product_categories : belongs_to
products ||--o{ product_price_histories : tracks
products ||--o{ product_reviews : receives
products ||--o{ order_items : ordered_as
products ||--o{ products : variant_of

orders ||--o{ order_items : contains
orders ||--|| order_destinations : shipped_to
orders ||--o{ payment_histories : paid_by
orders ||--o{ product_reviews : reviewed_for

order_combos ||--o{ order_items : groups
order_combos ||--|| order_statuses : has_status
order_combos ||--|| order_destinations : shipped_to
order_combos ||--o{ order_histories : tracked_by
order_combos ||--o{ order_combo_deliveries : delivered_by
order_combos ||--o{ transactions : generates

payment_methods ||--o{ payment_histories : processes
@enduml